fix: remove dependency on font-awesome

--- a/styles/atom-spotified.less
+++ b/styles/atom-spotified.less
@@ -112,10 +112,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 18px;
+    font-size: 13px;
 
     &:hover {
       opacity: .9 !important;
+    }
+
+    .icon::before {
+      margin: 0;
     }
   }
 
