add extra handler of panel toggle events

--- a/styles/atom-spotified.less
+++ b/styles/atom-spotified.less
@@ -136,4 +136,9 @@
   .fa {
     margin-right: 2px;
   }
+  a.inline-block {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+  }
 }
